--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,9 @@
 	License: pixelarity.com/license
 */
 
+.contactImfo span{
+	display: block;
+}
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -4476,6 +4479,7 @@
 		position: relative;
 		padding-bottom: 50%;
 		padding-top: 35px; height: 0; overflow: hidden;
+		margin-bottom: 20px;
 	}
 
 	.vid-container iframe,
