--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,9 @@
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
-
+.news-img {
+	width:  100%;
+}
 .contactImfo span{
 	display: block;
 }
