--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,24 @@
 	License: pixelarity.com/license
 */
 .news-img {
-	width:  100%;
+	width:  80%;
+	margin-top: 120px;
 }
+#hover {
+	display: none;
+	text-align: center;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0,0,0,0.5);
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 99999;
+	overflow-y:auto;
+}
+
 .contactImfo span{
 	display: block;
 }
